--- a/gui/admin-system.ui
+++ b/gui/admin-system.ui
@@ -339,10 +339,20 @@
                                 </child>
                                 <child>
                                   <object class="GtkScrolledWindow" id="known-invoice-scroll-bar">
-                                    <property name="child">
-                                      <object class="GtkColumnView" id="known-invoice-view"/>
-                                    </property>
                                     <property name="kinetic-scrolling">False</property>
+                                    <child>
+                                      <object class="GtkListView" id="known_invoice-view">
+                                        <property name="factory">
+                                          <object class="GtkListItemFactory"/>
+                                        </property>
+                                        <property name="header-factory">
+                                          <object class="GtkListItemFactory"/>
+                                        </property>
+                                        <property name="model">
+                                          <object class="GtkSingleSelection"/>
+                                        </property>
+                                      </object>
+                                    </child>
                                     <layout>
                                       <property name="column">7</property>
                                       <property name="column-span">2</property>
