GUI: Automatically updating business name
- when the user saves the business information the UI
  organization label will be updated with the newly saved
  business name.

Signed-off-by: Dawid J. Blom <dawidjblom@gmail.com>

--- a/gui/admin-system.ui
+++ b/gui/admin-system.ui
@@ -14,7 +14,8 @@
         <property name="show-title-buttons">False</property>
         <property name="title-widget">
           <object class="GtkLabel" id="organization-name">
-            <property name="label">Temp</property>
+            <property name="css-name">app_label</property>
+            <property name="label">Business Name</property>
           </object>
         </property>
         <child type="end">
