--- a/gui/admin-system.css
+++ b/gui/admin-system.css
@@ -1,10 +1,34 @@
 * { 
         font-family: monospace;
         font-size: 15px; 
-        color: black; 
+        color: #d9d9d9; 
 }
 
-app_label {
+app-label {
         font-size: 30px;
         font-weight: bold;
 }
+
+outlined-button {
+        border: 1px solid #813131;
+        border-radius: 5px;
+        background-color: #2e2e2e;
+        padding: 5px 10px;
+        font-weight: bold;
+        transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
+}
+
+outlined-button:hover {
+  background-color: #3c3c3c;
+}
+
+outlined-button:active {
+  background-color: #5c0000;
+  transform: scale(0.96);
+}
+
+outlined-button:focus {
+  outline: none;
+  box-shadow: none;
+}
+
