--- a/gui/admin-system.css
+++ b/gui/admin-system.css
@@ -10,25 +10,49 @@ app-label {
 }
 
 outlined-button {
-        border: 1px solid #813131;
-        border-radius: 5px;
-        background-color: #2e2e2e;
         padding: 5px 10px;
         font-weight: bold;
+        border-radius: 5px;
+        background-color: #2e2e2e;
+        box-shadow: 0px 0px 2px 2px rgba(0, 102, 255, 0.2);
         transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
 }
 
 outlined-button:hover {
-  background-color: #3c3c3c;
+        background-color: #3c3c3c;
 }
 
 outlined-button:active {
-  background-color: #5c0000;
-  transform: scale(0.96);
+        background-color: #0066ff;
+        transform: scale(0.96);
 }
 
-outlined-button:focus {
-  outline: none;
-  box-shadow: none;
+save-button {
+        padding: 5px 10px;
+        font-weight: bold;
+        border-radius: 5px;
+        background-color: #0066ff;
+        box-shadow: 0px 0px 1px 1px rgba(0, 102, 255, 0.5);
+        transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
 }
 
+save-button:hover {
+        background-color: #3c3c3c;
+}
+
+save-button:active {
+        background-color: #0066ff;
+        transform: scale(0.96);
+}
+
+listview {
+        padding: 5px 10px;
+        font-weight: bold;
+        border-radius: 10px;
+}
+
+columnview {
+        padding: 5px 10px;
+        font-weight: bold;
+        border-radius: 10px;
+}
