--- a/gui/admin-system.css
+++ b/gui/admin-system.css
@@ -23,7 +23,7 @@ outlined-button:hover {
 }
 
 outlined-button:active {
-        background-color: #0066ff;
+        background-color: #1a75ff;
         transform: scale(0.96);
 }
 
@@ -31,8 +31,8 @@ save-button {
         padding: 5px 10px;
         font-weight: bold;
         border-radius: 5px;
-        background-color: #0066ff;
-        box-shadow: 0px 0px 1px 1px rgba(0, 102, 255, 0.5);
+        background-color: #1a75ff;
+        box-shadow: 0px 0px 1px 1px rgba(0, 102, 255, 0.2);
         transition: background-color 200ms ease, border-color 150ms ease, transform 150ms ease;
 }
 
@@ -41,7 +41,7 @@ save-button:hover {
 }
 
 save-button:active {
-        background-color: #0066ff;
+        background-color: #1a75ff;
         transform: scale(0.96);
 }
 
